syntax = "proto3";

package greet;
  
option go_package = "github.com/Clement-Jean/grpc-go-course/greet/proto";

message GreetRequest {
    string first_name=1;
}
message GreetResponse {
    string result =1;
}

 service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse); //we can get one or ore responses in the rpc end point 
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
    rpc GreetWithDeadline (GreetRequest) returns (GreetResponse);
 }